prodMetadata/src/objects/Candidate_Review__c.object
<CustomObject>
    <description>Analysis of a contact by a member of staff following the CADET model</description>
    <fields>
        <fullName>Analytical_Thinking_Comments__c</fullName>
        <label>Analytical Thinking Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Analytical_Thinking__c</fullName>
        <label>Analytical Thinking</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Needs Improvement</fullName>
                </value>
                <value>
                    <fullName>2 - Minimally Acceptable</fullName>
                </value>
                <value>
                    <fullName>3 - Meets Standards</fullName>
                </value>
                <value>
                    <fullName>4 - Exceeds Standards</fullName>
                </value>
                <value>
                    <fullName>5 - Outstanding</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Candidate__c</fullName>
        <label>Candidate</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Candidate Reviews</relationshipLabel>
        <relationshipName>Candidate_Reviews</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Communication_Comments__c</fullName>
        <label>Communication Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Communication__c</fullName>
        <description>Written and Oral</description>
        <inlineHelpText>Written and Oral</inlineHelpText>
        <label>Communication</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Needs Improvement</fullName>
                </value>
                <value>
                    <fullName>2 - Minimally Acceptable</fullName>
                </value>
                <value>
                    <fullName>3 - Meets Standards</fullName>
                </value>
                <value>
                    <fullName>4 - Exceeds Standards</fullName>
                </value>
                <value>
                    <fullName>5 - Outstanding</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Drive_Comments__c</fullName>
        <label>Drive Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Drive__c</fullName>
        <description>Initiative and Ambition</description>
        <inlineHelpText>Initiative and Ambition</inlineHelpText>
        <label>Drive</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Needs Improvement</fullName>
                </value>
                <value>
                    <fullName>2 - Minimally Acceptable</fullName>
                </value>
                <value>
                    <fullName>3 - Meets Standards</fullName>
                </value>
                <value>
                    <fullName>4 - Exceeds Standards</fullName>
                </value>
                <value>
                    <fullName>5 - Outstanding</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Execution_Comments__c</fullName>
        <label>Execution Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Execution__c</fullName>
        <description>Quality and Timeliness of Work</description>
        <inlineHelpText>Quality and Timeliness of Work</inlineHelpText>
        <label>Execution</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Needs Improvement</fullName>
                </value>
                <value>
                    <fullName>2 - Minimally Acceptable</fullName>
                </value>
                <value>
                    <fullName>3 - Meets Standards</fullName>
                </value>
                <value>
                    <fullName>4 - Exceeds Standards</fullName>
                </value>
                <value>
                    <fullName>5 - Outstanding</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>General_Comments__c</fullName>
        <label>General Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Overall_Rating__c</fullName>
        <label>Overall Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Does not meet expectations</fullName>
                </value>
                <value>
                    <fullName>2 - Minimally meets expectations</fullName>
                </value>
                <value>
                    <fullName>3 - Meets Expectations</fullName>
                </value>
                <value>
                    <fullName>4 - Exceeds Expectations</fullName>
                </value>
                <value>
                    <fullName>5 - Outstanding</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pre_screen_Recommendation__c</fullName>
        <label>Pre-screen Recommendation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Invite to Interview</fullName>
                </value>
                <value>
                    <fullName>Possibly invite</fullName>
                </value>
                <value>
                    <fullName>Do not invite for interview</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pre_screen_Score__c</fullName>
        <formula>IF(ISPICKVAL( Pre_screen_Recommendation__c ,&quot;Invite to Interview&quot;), 2 ,(
IF (ISPICKVAL( Pre_screen_Recommendation__c,&quot;Possibly Invite&quot;),1,
IF (ISPICKVAL( Pre_screen_Recommendation__c,&quot;Do not invite for interview&quot;),-4, 0))))</formula>
        <label>Pre-screen Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reviewed_For__c</fullName>
        <label>Reviewed For</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Storm the Hill 2013</fullName>
                </value>
                <value>
                    <fullName>Internship</fullName>
                </value>
                <value>
                    <fullName>Storm the Hill 2014</fullName>
                </value>
                <value>
                    <fullName>Storm the Hill 2017</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Candidate_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reviewing_Department__c</fullName>
        <label>Reviewing Department</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>Programs</fullName>
                </value>
                <value>
                    <fullName>Policy</fullName>
                </value>
                <value>
                    <fullName>Executive Office</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Teamwork_Comments__c</fullName>
        <label>Teamwork Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Teamwork__c</fullName>
        <label>Teamwork</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Needs Improvement</fullName>
                </value>
                <value>
                    <fullName>2 - Minimally Acceptable</fullName>
                </value>
                <value>
                    <fullName>3 - Meets Standards</fullName>
                </value>
                <value>
                    <fullName>4 - Exceeds Standards</fullName>
                </value>
                <value>
                    <fullName>5 - Outstanding</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X_Factor__c</fullName>
        <description>Pizazz, what-what, 1-5, 5 is the Best</description>
        <inlineHelpText>Pizazz, what-what, 1-5, 5 is the Best</inlineHelpText>
        <label>X Factor</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Candidate Review</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Review-{00000}</displayFormat>
        <label>Candidate Review Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Candidate Reviews</pluralLabel>
    <recordTypes>
        <fullName>Detailed_Review</fullName>
        <active>true</active>
        <label>Detailed Review</label>
    </recordTypes>
    <recordTypes>
        <fullName>Prescreen</fullName>
        <active>true</active>
        <label>Prescreen</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>